jobs/q2_dynamic_51419527.err
  File "/tmp/run_l1_dynamic.py", line 29
    from aerial.phy5g.config import *
                                    ^
SyntaxError: import * only allowed at module level
  File "/tmp/run_l1_dynamic.py", line 29
    from aerial.phy5g.config import *
                                    ^
SyntaxError: import * only allowed at module level
  File "/tmp/run_l1_dynamic.py", line 29
    from aerial.phy5g.config import *
                                    ^
SyntaxError: import * only allowed at module level
  File "/tmp/run_l1_dynamic.py", line 29
    from aerial.phy5g.config import *
                                    ^
SyntaxError: import * only allowed at module level
